--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,5 @@
 .header-button {
-  background-color: #0000ff;
+  /* background-color: #0000ff; */
   color: aliceblue;
   width: 70px;
   height: 40px;
@@ -23,4 +23,14 @@ td {
 }
 h1 {
   color: rgb(15, 201, 139);
+}
+.form-main {
+  display: flex;
+  flex-direction: column;
+  max-width: fit-content;
+  padding-top: 30px;
+  padding: 30px;
+}
+button {
+  background-color: blueviolet;
 }
